--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>  
+    <title>Robo</title>
+    </head>
+	
+    <body>
+    <h1>Hello, world!</h1>
+    </body>
+	
+</html>
