--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	
     <body>
     <p>Hello, world!</p>
+    
+    <ul>
+    	<li><a href = "#index" >Home </a></li>
+        <li><a href = "#news" >News </a></li>
+        <li><a href = "https://www.youtube.com/watch?v=nDyu-z8q7ko" >Panada Videos </a></li>
+    </ul>
+    
     </body>
 	
 </html>
