--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
     	<li><a href = "#index" >Home </a></li>
         <li><a href = "#news" >News </a></li>
-        <li><a href = "https://www.youtube.com/watch?v=nDyu-z8q7ko" >Panada Videos </a></li>
+        <li><a href = "https://www.youtube.com/watch?v=nDyu-z8q7ko" >Panda Videos </a></li>
     </ul>
     
     </body>
