--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>Hello, world!</p>
     
     <ul>
-    	<li><a href = "#index" >Home </a></li>
+    	<li class = "active"><a href = "#index" >Home </a></li>
         <li><a href = "#news" >News </a></li>
         <li><a href = "https://www.youtube.com/watch?v=nDyu-z8q7ko" >Panda Videos </a></li>
     </ul>
